--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,155 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
     <script type="text/javascript" src="./main.js"></script>
+
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
+
+      <fieldset class="form">
+        <legend>Personal information</legend>
+
+        <label for="Surname" class="form__first">Surname:
+          <input
+          type="text"
+          name="Surname"
+          autocomplete="off"
+          class="first"><br>
+        </label>
+
+        <label for="Name" class="form__field">Name:
+          <input
+          type="text"
+          name="Name"
+          autocomplete="off"
+          class="field"><br>
+        </label>
+
+        <label for="Age" class="form__field">How old are You?
+          <input
+          type="number"
+          name="How old are You?"
+          value="12"
+          max="100"
+          min="1"
+          class="field"><br>
+        </label>
+
+        <label for="Date" class="form__field">Full date of birth:
+          <input
+          type="date"
+          name="date"
+          class="field"><br>
+        </label>
+
+        <label for="terms-of-agreement" class="form__field">I accept the term of the agreement
+          <input
+          type="checkbox"
+          name="agreement"
+          required
+          class="field">
+        </label>
+
+      </fieldset>
+
+
+      <fieldset class="form">
+        <legend>Registration</legend>
+
+        <label for="e-mail" class="form__first">E-mail:
+          <input type="email"
+          name="email"
+          placeholder="email@example.com"
+          class="first"><br>
+        </label>
+
+        <label for="Top-secret" class="form__field">Password:
+          <input
+          type="password"
+          name="password"
+          minlength="5"
+          maxlength="12"
+          class="field"><br>
+        </label>
+
+      </fieldset>
+
+      <fieldset class="form">
+        <legend>An interesting fact about you!</legend>
+
+        <label for="Pets" class="form__first">Do you love cats?
+          <input
+          type="radio"
+          name="cat"
+          class="first">Yes
+          <input
+          type="radio"
+          name="cat"
+          class="first">No
+        </label><br>
+
+        <label for="Color" class="form__field">What is your favourite color?
+          <input
+          type="color"
+          name="color"
+          class="field"><br>
+        </label>
+
+        <label for="Time" class="form__field">What time do you go to bed?
+          <input
+          type="time"
+          name="time"
+          class="field"><br>
+        </label>
+
+        <label for="cars" class="form__field">What is your favourite brand of cars?
+          <select
+          name="brand"
+          class="field"
+          multiple>
+
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Lada">Lada</option>
+            <option value=" " disabled
+            selected></option>
+
+          </select>
+        </label><br>
+
+        <label for="rank" class="form__field">How do you rate our work?
+          <input
+          type="range"
+          name="rate"
+          class="field"><br>
+        </label>
+
+      </fieldset>
+
+      <fieldset class="form">
+        <legend>Additional info:</legend>
+
+        <label for="comments" class="form__first">Comments:
+          <textarea
+          name="comment"
+          class="first"></textarea>
+        </label><br>
+
+        <label for="survey" class="form__field">Would you recommend us?
+          <select
+          name="recommendatation"
+          class="field"
+          required>
+            <option value="Yes">Yes</option>
+            <option value="No">No</option>
+
+          </select>
+        </label>
+
+      </fieldset>
+
+      <button type="submit" class="form__button">Submit</button>
+
+    </form>
+
   </body>
 </html>
