--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,8 @@
           type="text"
           name="Surname"
           autocomplete="off"
-          class="first"><br>
+          class="first"
+          ><br>
         </label>
 
         <label for="Name" class="form__field">Name:
@@ -31,7 +32,8 @@
           type="text"
           name="Name"
           autocomplete="off"
-          class="field"><br>
+          class="field"
+          ><br>
         </label>
 
         <label for="Age" class="form__field">How old are You?
@@ -41,14 +43,16 @@
           value="12"
           max="100"
           min="1"
-          class="field"><br>
+          class="field"
+          ><br>
         </label>
 
         <label for="Date" class="form__field">Full date of birth:
           <input
           type="date"
           name="date"
-          class="field"><br>
+          class="field"
+          ><br>
         </label>
 
         <label for="terms-of-agreement" class="form__field">I accept the term of the agreement
@@ -56,7 +60,8 @@
           type="checkbox"
           name="agreement"
           required
-          class="field">
+          class="field"
+          >
         </label>
 
       </fieldset>
@@ -69,7 +74,8 @@
           <input type="email"
           name="email"
           placeholder="email@example.com"
-          class="first"><br>
+          class="first"
+          ><br>
         </label>
 
         <label for="Top-secret" class="form__field">Password:
@@ -78,7 +84,8 @@
           name="password"
           minlength="5"
           maxlength="12"
-          class="field"><br>
+          class="field"
+          ><br>
         </label>
 
       </fieldset>
@@ -90,25 +97,29 @@
           <input
           type="radio"
           name="cat"
-          class="first">Yes
+          class="first"
+          >Yes
           <input
           type="radio"
           name="cat"
-          class="first">No
+          class="first"
+          >No
         </label><br>
 
         <label for="Color" class="form__field">What is your favourite color?
           <input
           type="color"
           name="color"
-          class="field"><br>
+          class="field"
+          ><br>
         </label>
 
         <label for="Time" class="form__field">What time do you go to bed?
           <input
           type="time"
           name="time"
-          class="field"><br>
+          class="field"
+          ><br>
         </label>
 
         <label for="cars" class="form__field">What is your favourite brand of cars?
@@ -121,7 +132,8 @@
             <option value="Audi">Audi</option>
             <option value="Lada">Lada</option>
             <option value=" " disabled
-            selected></option>
+            selected>
+            </option>
 
           </select>
         </label><br>
@@ -130,7 +142,8 @@
           <input
           type="range"
           name="rate"
-          class="field"><br>
+          class="field"
+          ><br>
         </label>
 
       </fieldset>
@@ -141,7 +154,8 @@
         <label for="comments" class="form__first">Comments:
           <textarea
           name="comment"
-          class="first"></textarea>
+          class="first">
+          </textarea>
         </label><br>
 
         <label for="survey" class="form__field">Would you recommend us?
